[workspace]
resolver = "2"
members = ["thumbnail", "envelope", "blobshot", "envelope/methods/guest", "thumbnail/methods/guest", "blobshot/methods/guest"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
