[package]
name = "blobshot"
version = "0.1.0"
edition = "2021"

default-run = "blobshot"

[dependencies]
blobshot-methods = { path = "methods" }
risc0-zkvm = { version = "1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3.3"
nmt-rs = { version = "0.2.0", default-features = false, features = ["serde"]}
celestia-types = { git = "https://github.com/eigerco/lumina", default-features = false }
base64 = "*"