[package]
name = "envelope"
version = "0.1.0"
edition = "2021"

default-run = "envelope"

[dependencies]
envelope-methods = { path = "methods" }
risc0-zkvm = { version = "1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bincode = "1.3.3"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
