[package]
name = "envelope-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
k256 = { version = "=0.13.1", features = ["arithmetic", "expose-field", "std", "ecdsa"], default_features = false }
chacha20 = "0.8.1"
#nmt-rs = { version = "0.2.0", default-features = false }
celestia-types = { git = "https://github.com/eigerco/lumina", default-features = false }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
