[package]
name = "thumbnail-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "=0.2.15", features = ["custom"] }
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
image = { version = "0.25.1", default-features = false, features = ["tiff", "png"] }
